fixed navbar overlap problem solved

--- a/src/styles/navbarLined.css
+++ b/src/styles/navbarLined.css
@@ -78,32 +78,34 @@ div, a, section{
 }
 
 section {
-    margin: auto;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
     width: 90%;
-    height: 95vh;
+    height: 97vh;
     border-bottom: solid 1px #000;
 }
 
+h1 {
+    margin:auto;
+}
+
 .top-gap {
-    margin-top: 7em;
-    visibility: hidden;
+    height: 4.7em;
+    display: block;
 }
 
 #about {
-    background-color: tomato;
+    background-color: #FFFFFF;
 }
 
 #education {
-    background-color: white;
+    background-color: #FFFFFF;
 }
 
 #publications {
-    background-color: white;
+    background-color: #FFFFFF;
 }
-
-.container-fluid {
-    z-index: 1;
-}
-
 
 
